# SGX-OS-Launcher

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
app/: App.cpp
app/adaptor/: TrustedEnclaveAdaptor.cpp  TrustedEnclaveAdaptor.hpp
app/adaptor/attestation/: LocalAttestationAdaptor.cpp  LocalAttestationAdaptor.hpp
app/adaptor/sealing/: OsSealingAdaptor.cpp  OsSealingAdaptor.hpp
app/launcher/: DynamicOSLauncher.cpp  DynamicOSLauncher.hpp  ILauncher.hpp  IOSLauncher.hpp  OfflineLauncher.cpp  OfflineLauncher.hpp  OnlineLauncher.cpp  OnlineLauncher.hpp  StaticOSLauncher.cpp  StaticOSLauncher.hpp
app/launcher/os/: DynamicOSLauncher.cpp  DynamicOSLauncher.hpp  IOSLauncher.hpp  StaticOSLauncher.cpp  StaticOSLauncher.hpp
app/network/: NetworkAgent.cpp  NetworkAgent.hpp  NetworkManager.cpp  NetworkManager.hpp
app/network/event/: INetworkEventHandler.hpp
app/trusted/: TrustedEnclaveUtil.cpp  TrustedEnclaveUtil.hpp
app/trusted/attestation/: LocalAttestationAdaptor.cpp  LocalAttestationAdaptor.hpp
app/trusted/sealing/: OsSealingAdaptor.cpp  OsSealingAdaptor.hpp
app/util/: ShellExecutor.cpp  ShellExecutor.hpp
cmake/: FindSGX.cmake
enclave/: Enclave.config.xml  Enclave.edl  Enclave.hpp  Enclave.lds  Enclave_private.pem
enclave/attestation/: LocalAttestation.cpp  LocalAttestation.edl
enclave/sealing/: OsSealing.cpp  OsSealing.edl
enclave/trusted/: LibDataManager.cpp  LibDataManager.edl  LibTLSManager.cpp  LibTLSManager.edl
include/: TypeUtils.hpp
script/: launch-os.sh  run-ra-process.sh  setup-permission.sh
